made changes in prisma schema

--- a/apps/UserApp/package.json
+++ b/apps/UserApp/package.json
@@ -17,7 +17,8 @@
     "postcss": "^8.4.31",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "@repo/prisma": "*"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
